# Desmos2

./: .gitignore  Desmos2.sln  README.md
Desmos2/: CMakeLists.txt  Camera.h  Desmos2.cpp  Desmos2.vcxproj  Desmos2.vcxproj.filters  ExprTkEvaluator.h  Graph2D.cpp  Graph2D.h  Inequality.cpp  Inequality.h  Shader.cpp  Shader.h  glad.c  imgui.ini
Desmos2/dependencies/include/imgui/: desktop.ini
Desmos2/glad/: glad.h
Desmos2/shaders/: simple.frag  simple.vert
TestsDesmos/: TestsDesmos.vcxproj  TestsDesmos.vcxproj.filters  test_camera.cpp  test_parser.cpp
